# mpfw_code_libs_fw2_wrapper_resources

./: .gitignore  LICENSED_CODE  LICENSE_HEADER
common/wsp/cmake/project/public/: 01_set_root_dirs.cmake  02_set_ver_dir.cmake  03_include_ver_set_inc_dirs.cmake  set_prj_dir.cmake
common/wsp/cmake/project/v_01/: CMakeLists.txt  include_dependencies.cmake
common/wsp/cmake/project/v_03/: CMakeLists.txt  set_cpp_files.cmake
common/wsp/cmake/project/v_04/: CMakeLists.txt  include_dependencies.cmake  set_cpp_files.cmake
common/wsp/cmake/project/v_04/public/: 01_set_root_dirs.cmake  02_set_prj_dir.cmake  03_set_inc_dirs.cmake
mac/src/rs/rsSerial/v_01/: rsSerial.cpp  rsSerial.h
mac/src/rs/rsSerial/v_02/: rsSerial.cpp  rsSerial.h
mac/src/rs/rsSerial/v_03/: rsSerial.cpp  rsSerial.h  rsSerialConnections.cpp
mac/src/rs/rsSerial/v_04/: rsSerial.cpp  rsSerial.h  rsSerialConnections.cpp
mac/wsp/cmake/project/v_04/: set_cpp_files.cmake
nxp/doc/: note_20230710_implementation_details.md
nxp/src/rs/rsButton/v_01/: rsButtons.cpp  rsButtons.h
nxp/src/rs/rsDbgConsole/v_01/: rsDbgConsole.cpp  rsDbgConsole.h
nxp/src/rs/rsSerial/v_01/: rsSerial.cpp  rsSerial.h
nxp/src/rs/rsSerial/v_02/: rsSerial.cpp  rsSerial.h
nxp/src/rs/rsSerial/v_03/: rsSerial.cpp  rsSerial.h
nxp/src/rs/rsSerial/v_04/: rsSerial.cpp  rsSerial.h
nxp/src/rs/rsSerial/v_05/: rsSerial.cpp  rsSerial.h  rsSerialConnections.cpp
nxp/src/rs/rsSerial/v_06/: rsSerial.cpp  rsSerial.h  rsSerialConnections.cpp
nxp/wsp/cmake/project/: set_cpp_files.cmake
nxp/wsp/xpresso/fw2_wrapper_resources/: .cproject  .gitignore  .project
stm32f769_disco/doc/: note_20230518_check_compiler_option.txt  note_20230707_reference_manuals.txt
stm32f769_disco/src/rs/rsSerial/v_00/: rsSerial.cpp
stm32f769_disco/src/rs/rsSerial/v_01/: rsSerial.cpp  rsSerial.h
stm32f769_disco/src/rs/rsSerial/v_02/: rsSerial.cpp
stm32f769_disco/src/rs/rsSerial/v_03/: rsSerial.cpp  rsSerial.h
stm32f769_disco/src/rs/rsSerial/v_04/: rsSerial.cpp
stm32f769_disco/src/rs/rsSerial/v_05/: rsSerial.cpp  rsSerial.h
stm32f769_disco/src/rs/rsSerial/v_06/: rsSerial.cpp  rsSerial.h  rsSerialConnections.cpp
stm32f769_disco/src/rs/rsSerial/v_07/: rsSerial.cpp  rsSerial.h  rsSerialConnections.cpp
stm32f769_disco/wsp/cmake/project/: set_cpp_files.cmake
stm32f769_disco/wsp/cmake/project/v_02/: set_cpp_files.cmake
stm32f769_disco/wsp/cmake/project/v_04/: set_cpp_files.cmake
stm32f769_disco/wsp/cube/fw2_wrapper_resources/: .cproject  .project
(+15 files in other folders)
